tests/baselines/reference/parserClassDeclaration6.errors.txt
parserClassDeclaration6.ts(1,17): error TS2304: Cannot find name 'A'.
parserClassDeclaration6.ts(1,20): error TS1174: Classes can only extend a single class.


==== parserClassDeclaration6.ts (2 errors) ====
    class C extends A, B {
                    ~
!!! error TS2304: Cannot find name 'A'.
                       ~
!!! error TS1174: Classes can only extend a single class.
    }